# Canteen-management-system

./: .gitignore  CMakeLists.txt  Demo  LICENSE  README.md
data/: populate_db.sql  users.db  users_backup.db
lib/: imgui_CMakeLists.txt
output/: activity_log.txt
output/bills/: bill1.tex  bill35.tex
src/: admin.cpp  main.cpp  sha256.h
